[gd_scene load_steps=4 format=3 uid="uid://flgba3ai02sf"]

[ext_resource type="Script" path="res://scenes/menus/in_game_pause.gd" id="1_ootck"]
[ext_resource type="Theme" uid="uid://ba1o537iqqi4k" path="res://assets/menu_theme.tres" id="2_6vg0o"]
[ext_resource type="FontFile" uid="uid://dsn7f2g76y1vo" path="res://assets/alagard.ttf" id="3_gr3a5"]

[node name="in_game_pause" type="Node2D"]
process_mode = 3
script = ExtResource("1_ootck")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(300, 0)
offset_right = 304.0
offset_bottom = 360.0
size_flags_vertical = 3
color = Color(0.121569, 0.121569, 0.129412, 0.862745)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
offset_left = 71.0
offset_top = 120.0
offset_right = 233.0
offset_bottom = 224.0

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6vg0o")
text = "Return To Game"

[node name="Back" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_6vg0o")
text = "Back To Title Screen"

[node name="Leave" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6vg0o")
text = "Back To Desktop"

[node name="Fullscreen" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gr3a5")
text = "Fullscreen"

[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Leave" to="." method="_on_leave_pressed"]
[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_check_button_toggled"]
